--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,8 +77,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     //Coil
-    implementation "com.github.skydoves:landscapist-coil:2.1.10"
-    implementation "com.google.accompanist:accompanist-placeholder:0.19.0"
+    implementation "io.coil-kt:coil-compose:2.3.0"
 
     //Room
     implementation "androidx.room:room-runtime:2.5.1"
