--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,8 @@ dependencies {
 
     //Navigation
     implementation "androidx.navigation:navigation-compose:2.5.3"
+
+    //Material3
+    implementation "androidx.compose.material3:material3:1.1.0"
+    implementation "androidx.compose.material3:material3-window-size-class:1.1.0"
 }
